[package]
name = "gdist-common"
version = "0.1.0"
authors = ["Sean Wilson <sean.wilson@ghs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.29"
futures-util-preview = "0.3.0-alpha.19"
tokio = "0.2.0-alpha.6"